Updated by task 'AUTO_TM_MT_1738707689565'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/b90daf98b4f99a2e527dce902a1520441bbbd134

--- a/help/sources/tutorials/api/create/cloud-storage/s3.md
+++ b/help/sources/tutorials/api/create/cloud-storage/s3.md
@@ -2,7 +2,7 @@
 title: 흐름 서비스 API를 사용하여 Amazon S3를 Experience Platform에 연결
 description: 흐름 서비스 API를 사용하여 Adobe Experience Platform을 Amazon S3에 연결하는 방법을 알아봅니다.
 exl-id: c11cf1c8-86ff-4851-b2c2-7e421dcc37ea
-source-git-commit: 22eae80d184ee6d0295be88856a47893faa428c7
+source-git-commit: 77941e08df893fab6dfdaf987c56c4d5a3fd4757
 workflow-type: tm+mt
 source-wordcount: '1040'
 ht-degree: 3%
@@ -114,7 +114,7 @@ curl -X POST \
 
 ### [!DNL S3] 세션 토큰 업데이트
 
-`s3SessionToken`은(는) 임시이며 만료되면 업데이트해야 합니다. [!DNL Flow Service] API에 PATCH 요청을 하여 기본 연결과 연결된 세션 토큰을 업데이트할 수 있습니다. [!DNL S3]의 임시 보안 자격 증명에 대한 자세한 내용은 [[!DNL S3] 개요](../../../../connectors/cloud-storage/s3.md#prerequisites)를 참조하십시오.
+`s3SessionToken`은(는) 임시이며 만료되면 업데이트해야 합니다. [!DNL Flow Service] API에 PATCH 요청을 하여 기본 연결과 연결된 세션 토큰을 업데이트할 수 있습니다. [!DNL S3]의 임시 보안 자격 증명에 대한 자세한 내용은 [[!DNL S3] 개요](../../../../connectors/cloud-storage/s3.md#azure)를 참조하십시오.
 
 >[!IMPORTANT]
 >
