--- a/help/release-notes/2024/june-2024.md
+++ b/help/release-notes/2024/june-2024.md
@@ -3,7 +3,7 @@ title: Adobe Experience Platform 릴리스 정보 2024년 6월
 description: Adobe Experience Platform의 2024년 6월 릴리스 정보.
 exl-id: 712d2967-2bac-47d7-ad02-8e93bdb28d96
 source-git-commit: 2d640b282feb783694276c69366b1fccadddfd78
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1357'
 ht-degree: 100%
 
