Updated by task 'AUTO_TM_MT_1751304493158' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/08f561f7079fe4f0185418a049e1469574b45de5

--- a/help/release-notes/2021/july-2021.md
+++ b/help/release-notes/2021/july-2021.md
@@ -5,7 +5,7 @@ doc-type: release notes
 last-update: July 28, 2021
 author: ens72471
 exl-id: 1810b42e-8e9e-49ed-a29f-71795e30fcb8
-source-git-commit: f129c215ebc5dc169b9a7ef9b3faa3463ab413f3
+source-git-commit: 2e41a1716e057cd33e4635c11ba9c3cfc185418a
 workflow-type: tm+mt
 source-wordcount: '827'
 ht-degree: 20%
@@ -94,7 +94,7 @@ Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 
 
 | 기능 | 설명 |
 | ------- | ----------- |
-| GA로 이동하는 Beta 소스 | 다음 소스가 Beta에서 GA로 승격되었습니다. <ul><li>[[!DNL Amazon Redshift]](../../sources/connectors/databases/redshift.md)</li><li>[[!DNL Azure Table Storage]](../../sources/connectors/databases/ats.md)</li><li>[[!DNL PayPal]](../../sources/connectors/payments/paypal.md)</li></ul> |
+| GA로 이동하는 Beta 소스 | 다음 소스가 Beta에서 GA로 승격되었습니다. <ul><li>[[!DNL Amazon Redshift]](../../sources/connectors/databases/redshift.md)</li><li>[[!DNL Azure Table Storage]](../../sources/connectors/databases/ats.md)</li></ul> |
 | [!DNL Salesforce Marketing Cloud]&#x200B;(Beta) | 이제 [!DNL Flow Service] API 또는 UI를 사용하여 [!DNL Salesforce Marketing Cloud]을(를) Experience Platform에 연결할 수 있습니다. 자세한 내용은 [[!DNL Salesforce Marketing Cloud] 커넥터 개요](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md)를 참조하십시오. |
 
 소스에 대한 자세한 내용은 [소스 개요](../../sources/home.md)를 참조하세요.
