--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -1,7 +1,7 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 2025년 7월
 description: Adobe Experience Platform의 2025년 7월 릴리스 정보.
-exl-id: f854f9e5-71be-4d56-a598-cfeb036716cb
+exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
 source-git-commit: 2a8d5576ea937cdda70f10218b5eec35613fd264
 workflow-type: tm+mt
 source-wordcount: '1623'
@@ -9,8 +9,7 @@ ht-degree: 24%
 
 ---
 
-
-# Adobe Experience Platform 릴리스 정보
+# Adobe Experience Platform 프리릴리스 노트
 
 >[!TIP]
 >
@@ -34,6 +33,7 @@ Adobe Experience Platform의 새로운 기능 및 기존 기능 업데이트:
 - [샌드박스](#sandboxes)
 - [Segmentation Service](#segmentation-service)
 - [소스](#sources)
+
 
 ## 용량 {#capacity}
 
@@ -158,3 +158,4 @@ Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 
 | [!DNL Salesforce]에서 레코드의 소프트 삭제 지원 | 이제 [!DNL Salesforce] 원본은 선택적 `includeDeletedObjects` 매개 변수를 통해 일시 삭제된 레코드를 포함할 수 있습니다. true로 설정하면 고객은 일시 삭제된 레코드를 [!DNL Salesforce] 쿼리에 포함하고 이러한 레코드를 Experience Platform으로 가져올 수 있습니다. 자세한 내용은 [[!DNL Salesforce] 소스 설명서](../../sources/connectors/crm/salesforce.md)를 참조하십시오. |
 
 자세한 내용은 [소스 개요](../../sources/home.md)를 참조하십시오.
+
