Updated by task 'AUTO_TM_MT_1753957938343' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/983df0c5b09e8c818c0253809d855633798136df

--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -1,15 +1,14 @@
 ---
 title: Adobe Experience Platform 릴리스 노트 2025년 7월
 description: Adobe Experience Platform의 2025년 7월 릴리스 정보.
-exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
-source-git-commit: 2553b8f016a20678550eed50671e3549ec42aae7
+source-git-commit: fff6318e7f70176aee5fafe2e024c71922496aff
 workflow-type: tm+mt
-source-wordcount: '1457'
-ht-degree: 21%
+source-wordcount: '1573'
+ht-degree: 22%
 
 ---
 
-# Adobe Experience Platform 프리릴리스 노트
+# Adobe Experience Platform 릴리스 정보
 
 >[!TIP]
 >
@@ -53,6 +52,7 @@ Adobe Experience Platform의 새로운 기능 및 기존 기능 업데이트:
 | 대상 | 설명 |
 | --- | --- |
 | [Google Customer Match + Display &amp; Video 360](/help/destinations/catalog/advertising/google-customer-match-dv360.md) 연결의 제한된 가용성 | 6월에 모든 고객이 잠시 이용할 수 있게 된 후 Adobe은 이 통합을 제한된 가용성으로 반환했습니다. 현재 이 대상에 대한 액세스는 이미 활성화된 고객으로 제한되며, Adobe 및 Google은 구현 문제를 해결하기 위해 노력하고 있습니다. 광범위한 롤아웃이 재개된 후 이 통합을 사용하려면 Adobe 담당자에게 문의하여 의도를 나타내십시오. |
+| [[!DNL The Trade Desk]](../../destinations/catalog/advertising/tradedesk.md) 내부 업그레이드 | 2025년 7월 31일 금요일부터 대상 카탈로그에 두 개의 [!DNL The Trade Desk] 카드가 나란히 표시됩니다. 이는 대상 서비스의 내부 업그레이드로 인한 변경 사항입니다. <br><br>기존 [!DNL The Trade Desk] 대상 커넥터의 이름이 **[!UICONTROL (더 이상 사용되지 않음)로 변경되었으며, 이름이]** The Trade Desk **[!UICONTROL 인 새 카드를 사용할 수 있습니다.]** 새 활성화 데이터 흐름을 보려면 카탈로그에서 새 **[!UICONTROL Trade Desk]** 연결을 사용하십시오. <br><br>**[!UICONTROL (사용되지 않음) Trade Desk]** 대상에 대한 활성 데이터 흐름이 있는 경우 자동으로 업데이트되므로 사용자의 작업이 필요하지 않습니다. <br><br>흐름 서비스 API[를 통해 데이터 흐름을 만드는 경우 ](https://developer.adobe.com/experience-platform-apis/references/destinations/) 및 [!DNL flow spec ID]을(를) 다음 값으로 업데이트해야 합니다.[!DNL connection spec ID]<ul><li>흐름 사양 ID: `86134ea1-b014-49e8-8bd3-689f4ce70578`</li><li>연결 사양 ID: `1029798b-a97f-4c21-81b2-e0301471166e`</li></ul> |
 
 **새로운 기능 또는 업데이트된 기능**
 
