--- a/help/release-notes/2025/july-2025.md
+++ b/help/release-notes/2025/july-2025.md
@@ -2,9 +2,9 @@
 title: Adobe Experience Platform 릴리스 노트 2025년 7월
 description: Adobe Experience Platform의 2025년 7월 릴리스 정보.
 exl-id: 0329a014-4f45-4d96-9ae0-bed89e6e52c6
-source-git-commit: ba475df04342424dc0b22cb1d3d429d12701dbd1
+source-git-commit: b0c2d5535bb4cdf7d00eaca43d65f744276494f3
 workflow-type: tm+mt
-source-wordcount: '1573'
+source-wordcount: '1574'
 ht-degree: 22%
 
 ---
@@ -135,7 +135,7 @@ Experience Platform은 다양한 데이터 공급자에 대한 소스 연결을 
 
 | 소스 | 설명 |
 | --- | --- |
-| [!DNL Didomi] 지원(스트리밍 SDK) | [!DNL Didomi] 소스를 사용하여 [!DNL Didomi]에서 동의 및 환경 설정 관리 데이터를 수집하여 개인 정보 보호 규정 준수 및 동의 기반 마케팅 전략을 지원합니다. 설정 방법에 대한 자세한 내용은 [[!DNL Didomi] 소스 개요](../../sources/connectors/consent-and-preferences/didomi.md)를 읽어 보십시오. 원본 연결을 만드는 단계는 [[!DNL Didomi] 원본 연결 안내서](../../sources/tutorials/ui/create/consent-and-preferences/didomi.md)를 참조하세요. |
+| [!BADGE 에 대한 ]{type=Informative}Beta[!DNL Didomi] 지원(스트리밍 SDK) | [!DNL Didomi] 소스를 사용하여 [!DNL Didomi]에서 동의 및 환경 설정 관리 데이터를 수집하여 개인 정보 보호 규정 준수 및 동의 기반 마케팅 전략을 지원합니다. 설정 방법에 대한 자세한 내용은 [[!DNL Didomi] 소스 개요](../../sources/connectors/consent-and-preferences/didomi.md)를 읽어 보십시오. 원본 연결을 만드는 단계는 [[!DNL Didomi] 원본 연결 안내서](../../sources/tutorials/ui/create/consent-and-preferences/didomi.md)를 참조하세요. |
 
 **새로운 기능 또는 업데이트된 기능**
 
